k8s/whispr/prod/user-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: whispr-prod
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: ghcr.io/whispr-messenger/user-service/user-service:sha-b2c2979
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3011
            - name: grpc
              containerPort: 50011
          readinessProbe:
            httpGet:
              path: /user/health/ready
              port: 3011
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: whispr-prod
spec:
  type: NodePort
  selector:
    app: user-service
  ports:
    - name: http
      port: 3011
      targetPort: 3011
      nodePort: 30011
    - name: grpc
      port: 50011
      targetPort: 50011
